proper assertions